...
            return ScaleTransition(
              scale: animation,
              child: toHeroContext.widget,
            );
          },
          child: CustomElevatedButton(
            key: Key('login_button_click'),
            onTap: () {
              if (loginCubit.formKey.currentState!.validate()) {
                loginCubit.emitLoginStates();
              }
            },
            isLoading: state is LoadingLoginState,
...
