...

  @override
  Widget build(BuildContext context) {
    final verificationCodeCubit = context.read<VerificationCubit>();
    return Center(
      child: Pinput(
        key: const Key('otp_field'),
        controller: verificationCodeCubit.pinController,
        focusNode: verificationCodeCubit.pinPutFocusNode,
        length: 4,
        validator: (value) {
          if (verificationCodeCubit.code != value) {
            return AppStrings.otpMismatch.tr();
...
