...
        final fieldError =
            (state is ErrorLoginState)
                ? state.fieldErrors['phone']?.join('\n')
                : null;

        return CustomTextFormField(
          key: Key('phone_field'),
          controller: loginCubit.phoneController,
          keyboardType: TextInputType.number,
          validator: (val) {
            if (val == null || val.isEmpty) {
              return AppStrings.pleaseEnterYourMobileNumber.tr();
            }
...
