...
        }
      },
      builder: (context, state) {
        return Column(
          children: [
            CustomElevatedButton(
              key: Key('verify_button'),
              onTap: () {
                if (state.start == 0) {
                  Helper().showSnackBar(
                    context: context,
                    text: AppStrings.timeOut.tr(),
                  );
...
